Fixed light mode dark mode not rendering. Colour scheme still needs work

--- a/NextJS (Frontend)/app/globals.scss
+++ b/NextJS (Frontend)/app/globals.scss
@@ -4,142 +4,144 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
-@layer base {
-  :root {
-    --text-50: #eff2f6;
-    --text-100: #dfe5ec;
-    --text-200: #bfcbd9;
-    --text-300: #9fb1c6;
-    --text-400: #7e96b4;
-    --text-500: #5e7ca1;
-    --text-600: #4b6381;
-    --text-700: #394b60;
-    --text-800: #263240;
-    --text-900: #131920;
-    --text-950: #090c10;
-    --text-1000: #0d1116;
-    
-    --background-50: #eef1f7;
-    --background-100: #dce2ef;
-    --background-200: #b9c6df;
-    --background-300: #96a9cf;
-    --background-400: #738cbf;
-    --background-500: #5070af;
-    --background-600: #40598c;
-    --background-700: #304369;
-    --background-800: #202d46;
-    --background-900: #101623;
-    --background-950: #080b11;
-    --background-1000: #f4f6fa;
-    
-    --primary-50: #ebf2fa;
-    --primary-100: #d7e5f4;
-    --primary-200: #afcce9;
-    --primary-300: #87b2de;
-    --primary-400: #5f99d3;
-    --primary-500: #377fc8;
-    --primary-600: #2c66a0;
-    --primary-700: #214c78;
-    --primary-800: #163350;
-    --primary-900: #0b1928;
-    --primary-950: #050d14;
-    --primary-1000: #3f85ca;
-    
-    --secondary-50: #e9f2fc;
-    --secondary-100: #d3e5f8;
-    --secondary-200: #a7ccf1;
-    --secondary-300: #7bb2ea;
-    --secondary-400: #4f99e3;
-    --secondary-500: #227fdd;
-    --secondary-600: #1c66b0;
-    --secondary-700: #154c84;
-    --secondary-800: #0e3358;
-    --secondary-900: #07192c;
-    --secondary-950: #030d16;
-    --secondary-1000: #83b8ec;
-    
-    --accent-50: #e7f2fe;
-    --accent-100: #cfe5fc;
-    --accent-200: #9fccf9;
-    --accent-300: #6eb2f7;
-    --accent-400: #3e99f4;
-    --accent-500: #0e7ff1;
-    --accent-600: #0b66c1;
-    --accent-700: #084c91;
-    --accent-800: #063360;
-    --accent-900: #031930;
-    --accent-950: #010d18;
-    --accent-1000: #4da1f5;
-    
+  @media (prefers-color-scheme: light) {
+    :root {
+      --text-50: #eff2f6;
+      --text-100: #dfe5ec;
+      --text-200: #bfcbd9;
+      --text-300: #9fb1c6;
+      --text-400: #7e96b4;
+      --text-500: #5e7ca1;
+      --text-600: #4b6381;
+      --text-700: #394b60;
+      --text-800: #263240;
+      --text-900: #131920;
+      --text-950: #090c10;
+      --text-1000: #0d1116;
+
+      --background-50: #eef1f7;
+      --background-100: #dce2ef;
+      --background-200: #b9c6df;
+      --background-300: #96a9cf;
+      --background-400: #738cbf;
+      --background-500: #5070af;
+      --background-600: #40598c;
+      --background-700: #304369;
+      --background-800: #202d46;
+      --background-900: #101623;
+      --background-950: #080b11;
+      --background-1000: #f4f6fa;
+
+      --primary-50: #ebf2fa;
+      --primary-100: #d7e5f4;
+      --primary-200: #afcce9;
+      --primary-300: #87b2de;
+      --primary-400: #5f99d3;
+      --primary-500: #377fc8;
+      --primary-600: #2c66a0;
+      --primary-700: #214c78;
+      --primary-800: #163350;
+      --primary-900: #0b1928;
+      --primary-950: #050d14;
+      --primary-1000: #3f85ca;
+
+      --secondary-50: #e9f2fc;
+      --secondary-100: #d3e5f8;
+      --secondary-200: #a7ccf1;
+      --secondary-300: #7bb2ea;
+      --secondary-400: #4f99e3;
+      --secondary-500: #227fdd;
+      --secondary-600: #1c66b0;
+      --secondary-700: #154c84;
+      --secondary-800: #0e3358;
+      --secondary-900: #07192c;
+      --secondary-950: #030d16;
+      --secondary-1000: #83b8ec;
+
+      --accent-50: #e7f2fe;
+      --accent-100: #cfe5fc;
+      --accent-200: #9fccf9;
+      --accent-300: #6eb2f7;
+      --accent-400: #3e99f4;
+      --accent-500: #0e7ff1;
+      --accent-600: #0b66c1;
+      --accent-700: #084c91;
+      --accent-800: #063360;
+      --accent-900: #031930;
+      --accent-950: #010d18;
+      --accent-1000: #4da1f5;
+
+    }
   }
-  .dark {
-    --text-50: #090c10;
-    --text-100: #131920;
-    --text-200: #263240;
-    --text-300: #394b60;
-    --text-400: #4b6381;
-    --text-500: #5e7ca1;
-    --text-600: #7e96b4;
-    --text-700: #9fb1c6;
-    --text-800: #bfcbd9;
-    --text-900: #dfe5ec;
-    --text-950: #eff2f6;
-    --text-1000: #e9edf2;
-    
-    --background-50: #090c11;
-    --background-100: #111822;
-    --background-200: #223044;
-    --background-300: #334766;
-    --background-400: #445f88;
-    --background-500: #5577aa;
-    --background-600: #7792bb;
-    --background-700: #99adcc;
-    --background-800: #bbc9dd;
-    --background-900: #dde4ee;
-    --background-950: #eef1f6;
-    --background-1000: #05070a;
-    
-    --primary-50: #050d14;
-    --primary-100: #0b1928;
-    --primary-200: #163350;
-    --primary-300: #214c78;
-    --primary-400: #2c66a0;
-    --primary-500: #377fc8;
-    --primary-600: #5f99d3;
-    --primary-700: #87b2de;
-    --primary-800: #afcce9;
-    --primary-900: #d7e5f4;
-    --primary-950: #ebf2fa;
-    --primary-1000: #357ac0;
-    
-    --secondary-50: #030d16;
-    --secondary-100: #07192c;
-    --secondary-200: #0e3358;
-    --secondary-300: #154c84;
-    --secondary-400: #1c66b0;
-    --secondary-500: #227fdd;
-    --secondary-600: #4f99e3;
-    --secondary-700: #7bb2ea;
-    --secondary-800: #a7ccf1;
-    --secondary-900: #d3e5f8;
-    --secondary-950: #e9f2fc;
-    --secondary-1000: #13477c;
-    
-    --accent-50: #010d18;
-    --accent-100: #031930;
-    --accent-200: #063360;
-    --accent-300: #084c91;
-    --accent-400: #0b66c1;
-    --accent-500: #0e7ff1;
-    --accent-600: #3e99f4;
-    --accent-700: #6eb2f7;
-    --accent-800: #9fccf9;
-    --accent-900: #cfe5fc;
-    --accent-950: #e7f2fe;
-    --accent-1000: #0a5eb2;
-    
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --text-50: #090c10;
+      --text-100: #131920;
+      --text-200: #263240;
+      --text-300: #394b60;
+      --text-400: #4b6381;
+      --text-500: #5e7ca1;
+      --text-600: #7e96b4;
+      --text-700: #9fb1c6;
+      --text-800: #bfcbd9;
+      --text-900: #dfe5ec;
+      --text-950: #eff2f6;
+      --text-1000: #e9edf2;
+
+      --background-50: #090c11;
+      --background-100: #111822;
+      --background-200: #223044;
+      --background-300: #334766;
+      --background-400: #445f88;
+      --background-500: #5577aa;
+      --background-600: #7792bb;
+      --background-700: #99adcc;
+      --background-800: #bbc9dd;
+      --background-900: #dde4ee;
+      --background-950: #eef1f6;
+      --background-1000: #05070a;
+
+      --primary-50: #050d14;
+      --primary-100: #0b1928;
+      --primary-200: #163350;
+      --primary-300: #214c78;
+      --primary-400: #2c66a0;
+      --primary-500: #377fc8;
+      --primary-600: #5f99d3;
+      --primary-700: #87b2de;
+      --primary-800: #afcce9;
+      --primary-900: #d7e5f4;
+      --primary-950: #ebf2fa;
+      --primary-1000: #357ac0;
+
+      --secondary-50: #030d16;
+      --secondary-100: #07192c;
+      --secondary-200: #0e3358;
+      --secondary-300: #154c84;
+      --secondary-400: #1c66b0;
+      --secondary-500: #227fdd;
+      --secondary-600: #4f99e3;
+      --secondary-700: #7bb2ea;
+      --secondary-800: #a7ccf1;
+      --secondary-900: #d3e5f8;
+      --secondary-950: #e9f2fc;
+      --secondary-1000: #13477c;
+
+      --accent-50: #010d18;
+      --accent-100: #031930;
+      --accent-200: #063360;
+      --accent-300: #084c91;
+      --accent-400: #0b66c1;
+      --accent-500: #0e7ff1;
+      --accent-600: #3e99f4;
+      --accent-700: #6eb2f7;
+      --accent-800: #9fccf9;
+      --accent-900: #cfe5fc;
+      --accent-950: #e7f2fe;
+      --accent-1000: #0a5eb2;
+    }
   }
-}
+
 
 
 body {
